--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .background{
@@ -21,6 +21,8 @@ body{
     background-position: center;
     width: 100%;
     height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
 }
 
 header{
@@ -67,7 +69,7 @@ button:hover{
 }
 
 .container-text{
-    padding: 150px 0 0 130px;
+    padding: 180px 0 0 130px;
 }
 
 .text h3{
@@ -78,6 +80,7 @@ button:hover{
 .text h1{
     color: #fff;
     margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .text span{
@@ -97,6 +100,29 @@ button:hover{
     margin-top: 10px;
 }
 
-.btn{
-    margin-top: 20px;
+.slides{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    color: #fff;
+    scroll-snap-align: start;
+}
+
+.about{
+    background: linear-gradient(454deg, #9aeb00, #49aa10);
+}
+
+.projects{
+    background: linear-gradient(454deg, #9aeb00, #49aa10);
+}
+
+.skills{
+    background: linear-gradient(454deg, #9aeb00, #49aa10);
+}
+
+.contact{
+    background: linear-gradient(454deg, #9aeb00, #49aa10);
 }
