--- a/style.css
+++ b/style.css
@@ -9,8 +9,11 @@
     font-family: "Silkscreen", sans-serif;
 }
 
-body{
+html, body{
+    height: 100vh;
     overflow: scroll;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
 }
 
 .background{
@@ -21,8 +24,7 @@ body{
     background-position: center;
     width: 100%;
     height: 100vh;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
+    scroll-snap-align: start;
 }
 
 header{
@@ -70,6 +72,7 @@ button:hover{
 
 .container-text{
     padding: 180px 0 0 130px;
+    height: 95vh;
 }
 
 .text h3{
@@ -125,4 +128,30 @@ button:hover{
 
 .contact{
     background: linear-gradient(454deg, #9aeb00, #49aa10);
+}
+
+.back-to-top {
+	position: fixed;
+	bottom: 2rem;
+	right: 2rem;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #9aeb00;
+	border-radius: 2rem;
+	padding: 0.4rem;
+	transition: 0.2s ease-out;
+}
+
+.back-to-top span {
+	color: #fff;
+	font-size: 3rem;
+	transition: 0.2s ease-out;
+}
+
+.back-to-top:hover {
+	background-color: #292560;
+}
+.back-to-top:hover span {
+	transform: translateY(-4px);
 }
