--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 
 html, body{
     height: 100vh;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
@@ -23,7 +24,7 @@ html, body{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 100vh;
+    height: 105vh;
     scroll-snap-align: start;
 }
 
@@ -72,7 +73,7 @@ button:hover{
 
 .container-text{
     padding: 180px 0 0 130px;
-    height: 95vh;
+    height: 100vh;
 }
 
 .text h3{
@@ -109,7 +110,7 @@ button:hover{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    gap: 50px;
     color: #fff;
     scroll-snap-align: start;
 }
